[gd_scene load_steps=12 format=2]

[ext_resource path="res://Script/Player.gd" type="Script" id=1]
[ext_resource path="res://Asset/tank/tour_canon.png" type="Texture" id=2]
[ext_resource path="res://Asset/textureProgress.png" type="Texture" id=3]
[ext_resource path="res://Asset/textureProgressRed.png" type="Texture" id=4]
[ext_resource path="res://Asset/tank/tour_tank.png" type="Texture" id=5]
[ext_resource path="res://Asset/tank/fond_tank.png" type="Texture" id=6]
[ext_resource path="res://Asset/tank/fond_canon.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=3]
radius = 29.6142

[sub_resource type="CircleShape2D" id=2]
radius = 46.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 1 )

[node name="Sprite" type="Node2D" parent="."]

[node name="Base" type="Node2D" parent="Sprite"]

[node name="TourTank" type="Sprite" parent="Sprite/Base"]
position = Vector2( -3, 0 )
rotation = -1.5708
texture = ExtResource( 5 )

[node name="FondTank" type="Sprite" parent="Sprite/Base"]
position = Vector2( -3, 0 )
rotation = -1.5708
texture = ExtResource( 6 )

[node name="Canon" type="Node2D" parent="Sprite"]

[node name="TourCanon" type="Sprite" parent="Sprite/Canon"]
position = Vector2( -1, 9.53674e-07 )
rotation = -1.5708
texture = ExtResource( 2 )
offset = Vector2( 0, 15 )

[node name="FondCanon" type="Sprite" parent="Sprite/Canon"]
position = Vector2( -1, 9.53674e-07 )
rotation = -1.5708
texture = ExtResource( 7 )
offset = Vector2( 0, 15 )

[node name="BulletSpawn" type="Position2D" parent="Sprite/Canon"]
position = Vector2( 29, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="TextureProgress" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -208.0
margin_top = -50.0
margin_right = 208.0
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/hit = SubResource( 5 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
